--- a/site/index-admin.html
+++ b/site/index-admin.html
@@ -251,7 +251,7 @@
                             <p class="help-block text-danger"></p>
                         </div>
 
-                        <div class="col-sm-6 col-md-4 form-group">
+                        <div class="form-group">
                             <form id="upload" method="post" enctype="multipart/form-data">
                                 <ul>
                                     <li>
@@ -282,47 +282,50 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading text-uppercase">Administradores</h2>
                     <h3 class="section-subheading text-muted">Cadastre novos Administradores no seu site.</h3>
-                </div>
-
-                <div class="row">
-                    <div class="col-lg-12 ">
-
-                        <form id="contactForm" name="Adm-cadastrar" novalidate="novalidate">
-
-
-                            <input class="form-control" id="nome" type="text" placeholder="Digite o nome *" required="required" data-validation-required-message="Please enter your email address.">
-                            <p class="help-block text-danger"></p>
 
 
 
-                            <input class="form-control" id="telefone" type="text" placeholder="Digite o telefone *" required="required" data-validation-required-message="Please enter your email address.">
-                            <p class="help-block text-danger"></p>
+                    <center>
+                        <div class="col-md-6">
+
+                            <form id="contactForm" name="Adm-cadastrar" novalidate="novalidate">
+
+
+                                <input class="form-control" id="nome" type="text" placeholder="Digite o nome *" required="required" data-validation-required-message="Please enter your email address.">
+                                <p class="help-block text-danger"></p>
 
 
 
-                            <input class="form-control" id="email" type="email" placeholder="Digite o email *" required="required" data-validation-required-message="Please enter your email address.">
-                            <p class="help-block text-danger"></p>
+                                <input class="form-control" id="telefone" type="text" placeholder="Digite o telefone *" required="required" data-validation-required-message="Please enter your email address.">
+                                <p class="help-block text-danger"></p>
 
 
 
-                            <input class="form-control" id="senha" type="password" placeholder=" Digite a senha *" required="required" data-validation-required-message="Please enter your phone number.">
-                            <p class="help-block text-danger"></p>
+                                <input class="form-control" id="email" type="email" placeholder="Digite o email *" required="required" data-validation-required-message="Please enter your email address.">
+                                <p class="help-block text-danger"></p>
 
 
 
-                            <input class="form-control" id="conf_senha" type="password" placeholder="Confirme sua senha *" required="required" data-validation-required-message="Please enter your phone number.">
-                            <p class="help-block text-danger"></p>
+                                <input class="form-control" id="senha" type="password" placeholder=" Digite a senha *" required="required" data-validation-required-message="Please enter your phone number.">
+                                <p class="help-block text-danger"></p>
 
 
-                            <br class="row">
-                            <div class="clearfix"></div>
-                            <div class="col-lg-12 text-center">
-                                <div id="success"></div>
-                                <button id="agndar-button" class="btn btn-primary btn-xl text-uppercase" type="submit">Cadastrar</button>
-                            </div>
+
+                                <input class="form-control" id="conf_senha" type="password" placeholder="Confirme sua senha *" required="required" data-validation-required-message="Please enter your phone number.">
+                                <p class="help-block text-danger"></p>
+
+
+                                <br class="row">
+                                <div class="clearfix"></div>
+                                <div class="col-lg-12 text-center">
+                                    <div id="success"></div>
+                                    <button id="agndar-button" class="btn btn-primary btn-xl text-uppercase" type="submit">Cadastrar</button>
+                                </div>
+                            </form>
+                    </center>
                     </div>
                 </div>
-                </form>
+
 
             </div>
         </div>
