--- a/site/agendamento2.html
+++ b/site/agendamento2.html
@@ -31,7 +31,7 @@
 
 
         <div class="col-md-6">
-            <h1 class="section-subheading text-muted">Selecione os produtos desejados</h1>
+            <h1 class="section-subheading text-muted">Os produtos disponíveis nessa data são:</h1>
             <input type="checkbox" name="Pipoqueira de cinema1" value="Pipoqueira de cinema1"> Pipoqueira (220V) <br>
             <input type="checkbox" name="Pipoqueira de cinema2" value="Pipoqueira de cinema2"> Pipoqueira (120V) <br>
             <input type="checkbox" name="Máquina de algodão doce" value="Máquina de algodão"> Maquina de algodão doce <br>
